deploy/platform/manifests/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
  namespace: oih-dev-ns
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
        - name: master
          image: grafana/grafana:latest
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pdisk
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
            initialDelaySeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
      volumes:
        - name: grafana-pdisk
          gcePersistentDisk:
            pdName: timeseries-grafana
            fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
  namespace: oih-dev-ns
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: grafana
  type: NodePort
