deploy/platform/manifests/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
  namespace: oih-dev-ns
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influx-db
          image: influxdb:latest
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influx-pdisk
          ports:
            - containerPort: 8086
          livenessProbe:
            httpGet:
              path: /ping
              port: 8086
            initialDelaySeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: 8086
            initialDelaySeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: influx-pdisk
          gcePersistentDisk:
            pdName: timeseries-influx
            fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
  namespace: oih-dev-ns
spec:
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app: influxdb
  type: NodePort
